--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/techfriccom/public_html/
-    - /bin/cp -R dusupay $DEPLOYPATH
+    - /bin/cp -R $DEPLOYPATH
